
 * Channel Variables conveyed with a channel no longer contain the name of the
   channel as part of the key field, i.e., ChanVariable(SIP/foo): bar=baz is now
   ChanVariable: bar=baz. When multiple channels are present in a single AMI
   event, the various ChanVariable fields will contain a suffix that specifies
   which channel they correspond to.

Channel Drivers
------------------

chan_mobile
------------------
 * Added general support for busy detection.

 * Added ECAM command support for Sony Ericsson phones.

chan_sip
------------------
 * Added support for RFC 3327 "Path" headers. This can be enabled in sip.conf
   using the 'supportpath' setting, either on a global basis or on a peer basis.
   This setting enables Asterisk to route outgoing out-of-dialog requests via a
   set of proxies by using a pre-loaded route-set defined by the Path headers in
   the REGISTER request. See Realtime updates for more configuration information.

Features
-------------------
 * The BRIDGE_FEATURES channel variable would previously only set features for
   the calling party and would set this feature regardless of whether the
   feature was in caps or in lowercase. Use of a caps feature for a letter
   will now apply the feature to the calling party while use of a lowercase
   letter will apply that feature to the called party.

 * Add support for automixmonitor to the BRIDGE_FEATURES channel variable.

 * PARKINGSLOT and PARKEDLOT channel variables will now be set for a parked
   channel even when comebactoorigin=yes

 * You can now have the settings for a channel updated using the FEATURE()
   and FEATUREMAP() functions inherited to child channels by setting
   FEATURE(inherit)=yes.

Logging
-------------------
 * When performing queue pause/unpause on an interface without specifying an
   individual queue, the PAUSEALL/UNPAUSEALL event will only be logged if at
   least one member of any queue exists for that interface.
